# Oxidize

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
assets/: icon-64.rgba  placeholder-64.rgba
src/: backup.rs  cli.rs  commands.rs  hunter.rs  lib.rs  main.rs  model.rs  registry.rs  safety.rs  scanner.rs  term.rs  uninstall.rs  util.rs
